--- a/server-service.yaml
+++ b/server-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: java-server-service
-  namespace: singlebranch
+  namespace: multibranch
 spec:
   selector:
     app: java-server
