--- a/server-deployment.yaml
+++ b/server-deployment.yaml
@@ -7,11 +7,11 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: java-server
+      app: java-server-multi
   template:
     metadata:
       labels:
-        app: java-server
+        app: java-server-milti
     spec:
       containers:
       - name: java-server
